; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_test_index_tests__can_modify_while_iterating.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_test_index_tests__can_modify_while_iterating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_11__ = type { i8*, i8*, i32, %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }

@TEST_INDEX_PATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"8312e0a89a9cbab77c732b6bc39b51a783e3a318\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"newfile\00", align 1
@GIT_FILEMODE_BLOB = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [41 x i8] c"4141414141414141414141414141414141414141\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"Makefile\00", align 1
@GIT_ITEROVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_tests__can_modify_while_iterating() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca %struct.TYPE_11__, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = bitcast %struct.TYPE_11__* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %8, i8 0, i64 24, i1 false)
  store i64 0, i64* %5, align 8
  store i64 0, i64* %6, align 8
  %9 = load i32, i32* @TEST_INDEX_PATH, align 4
  %10 = call i32 @git_index_open(i32** %1, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_index_iterator_new(%struct.TYPE_10__** %2, i32* %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %1, align 8
  %16 = call i64 @git_index_entrycount(i32* %15)
  store i64 %16, i64* %5, align 8
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i32 0, i32 0
  %19 = call i32 @git_vector_is_sorted(i32* %18)
  %20 = call i32 @cl_assert(i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %4, i32 0, i32 2
  %22 = call i32 @git_oid_fromstr(i32* %21, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %23 = call i32 @cl_git_pass(i32 %22)
  %24 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %4, i32 0, i32 0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %24, align 8
  %25 = load i8*, i8** @GIT_FILEMODE_BLOB, align 8
  %26 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %4, i32 0, i32 1
  store i8* %25, i8** %26, align 8
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @git_index_add(i32* %27, %struct.TYPE_11__* %4)
  %29 = call i32 @cl_git_pass(i32 %28)
  %30 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %4, i32 0, i32 2
  %31 = call i32 @git_oid_fromstr(i32* %30, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  %32 = call i32 @cl_git_pass(i32 %31)
  %33 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %4, i32 0, i32 0
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i8** %33, align 8
  %34 = load i8*, i8** @GIT_FILEMODE_BLOB, align 8
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %4, i32 0, i32 1
  store i8* %34, i8** %35, align 8
  %36 = load i32*, i32** %1, align 8
  %37 = call i32 @git_index_add(i32* %36, %struct.TYPE_11__* %4)
  %38 = call i32 @cl_git_pass(i32 %37)
  br label %39

39:                                               ; preds = %0, %46
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %41 = call i32 @git_index_iterator_next(%struct.TYPE_11__** %3, %struct.TYPE_10__* %40)
  store i32 %41, i32* %7, align 4
  %42 = load i32, i32* %7, align 4
  %43 = load i32, i32* @GIT_ITEROVER, align 4
  %44 = icmp eq i32 %42, %43
  br i1 %44, label %45, label %46

45:                                               ; preds = %39
  br label %49

46:                                               ; preds = %39
  %47 = load i64, i64* %6, align 8
  %48 = add i64 %47, 1
  store i64 %48, i64* %6, align 8
  br label %39

49:                                               ; preds = %45
  %50 = load i64, i64* %5, align 8
  %51 = load i64, i64* %6, align 8
  %52 = call i32 @cl_assert_equal_i(i64 %50, i64 %51)
  %53 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %54 = call i32 @git_index_iterator_free(%struct.TYPE_10__* %53)
  %55 = load i32*, i32** %1, align 8
  %56 = call i32 @git_index_free(i32* %55)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_index_open(i32**, i32) #2

declare dso_local i32 @git_index_iterator_new(%struct.TYPE_10__**, i32*) #2

declare dso_local i64 @git_index_entrycount(i32*) #2

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i32 @git_vector_is_sorted(i32*) #2

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #2

declare dso_local i32 @git_index_add(i32*, %struct.TYPE_11__*) #2

declare dso_local i32 @git_index_iterator_next(%struct.TYPE_11__**, %struct.TYPE_10__*) #2

declare dso_local i32 @cl_assert_equal_i(i64, i64) #2

declare dso_local i32 @git_index_iterator_free(%struct.TYPE_10__*) #2

declare dso_local i32 @git_index_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
